force-app/main/default/objects/Quote__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>Country</label>
    <length>60</length>
    <type>Text</type>
</CustomField>