force-app/main/default/objects/Quote__c/fields/Current_User_Custom__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current User Custom</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes4</relationshipName>
    <type>Lookup</type>
</CustomField>