force-app/main/default/objects/Quote__c/fields/Custom_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Custom_Header_Text__c</fullName>
    <label>Custom Header Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>