force-app/main/default/objects/Quote__c/fields/Custom_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Custom_Total_Price__c</fullName>
    <label>Custom Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>