force-app/main/default/objects/Quote__c/fields/CustomerPurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>CustomerPurchaseOrder__c</fullName>
    <label>CustomerPurchaseOrder</label>
    <length>30</length>
    <type>Text</type>
</CustomField>