force-app/main/default/objects/Quote__c/fields/CustomerResponsibilities__c.field-meta.xml
<CustomField>
    <fullName>CustomerResponsibilities__c</fullName>
    <description>Service Related Customer Responsibilities Assumptions</description>
    <label>Customer Responsibilities</label>
    <length>1012</length>
    <type>LongTextArea</type>
</CustomField>