force-app/main/default/objects/Quote__c/fields/customerSharedPurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>customerSharedPurchasePrice__c</fullName>
    <description>SAQM-4780,4790</description>
    <label>Customer Shared Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>