force-app/main/default/objects/Quote__c/fields/Date_Last_Shared__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Shared__c</fullName>
    <label>Date Last Shared</label>
    <type>DateTime</type>
</CustomField>