force-app/main/default/objects/Quote__c/fields/Deadline_Approval_Days__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Approval_Days__c</fullName>
    <description>Used on reports to show how many days early or late a quote approval occurred.</description>
    <formula>(DATEVALUE(Quote_Due_Date_Time__c)) - Approval_Date__c</formula>
    <label>Deadline Approval Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>