force-app/main/default/objects/Quote__c/fields/Deal_Calculator_Response__c.field-meta.xml
<CustomField>
    <fullName>Deal_Calculator_Response__c</fullName>
    <label>Deal Calculator Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>