force-app/main/default/objects/Quote__c/fields/Deal_Manager_Request__c.field-meta.xml
<CustomField>
    <fullName>Deal_Manager_Request__c</fullName>
    <description>This field is used to store request body for Deal manager callout.</description>
    <label>Deal Manager Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>