force-app/main/default/objects/Quote__c/fields/Deal_Manager_Response__c.field-meta.xml
<CustomField>
    <fullName>Deal_Manager_Response__c</fullName>
    <label>Deal Manager Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>