force-app/main/default/objects/Quote__c/fields/Deal_Pricing_Replay_Id__c.field-meta.xml
<CustomField>
    <fullName>Deal_Pricing_Replay_Id__c</fullName>
    <description>Replay Id of Zilliant Platform Event</description>
    <label>Deal Pricing Replay Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>