force-app/main/default/objects/Quote__c/fields/Def_WaiveShippingHandlingCharge__c.field-meta.xml
<CustomField>
    <fullName>Def_WaiveShippingHandlingCharge__c</fullName>
    <formula>Bill_To_Name__r.Waive_Shipping_and_Handling_Charge__c</formula>
    <label>Def Waive Shipping and Handling Charge</label>
    <type>Checkbox</type>
</CustomField>