force-app/main/default/objects/Quote__c/fields/Default_Billing_Format__c.field-meta.xml
<CustomField>
    <fullName>Default_Billing_Format__c</fullName>
    <formula>TEXT(Bill_To_Name__r.Billing_Format__c)</formula>
    <label>Default Billing Format</label>
    <type>Text</type>
</CustomField>