force-app/main/default/objects/Quote__c/fields/Default_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Default_Billing_Frequency__c</fullName>
    <formula>TEXT(Bill_To_Name__r.Billing_Frequency__c)</formula>
    <label>Default Billing Frequency</label>
    <type>Text</type>
</CustomField>