force-app/main/default/objects/Quote__c/fields/Default_Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Default_Billing_Method__c</fullName>
    <formula>TEXT(Bill_To_Name__r.Billing_Method__c)</formula>
    <label>Default Billing Method</label>
    <type>Text</type>
</CustomField>