force-app/main/default/objects/Quote__c/fields/Default_Billing_Week_Day__c.field-meta.xml
<CustomField>
    <fullName>Default_Billing_Week_Day__c</fullName>
    <formula>TEXT(Bill_To_Name__r.Billing_Week_Day__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Billing Week Day</label>
    <type>Text</type>
</CustomField>