force-app/main/default/objects/Quote__c/fields/Default_Discount_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Discount_Days__c</fullName>
    <formula>TEXT(Bill_To_Name__r.Discount_Days__c )</formula>
    <label>Default Discount Days</label>
    <type>Text</type>
</CustomField>