force-app/main/default/objects/Quote__c/fields/Default_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Default_Discount_Percent__c</fullName>
    <formula>TEXT(Bill_To_Name__r.Discount_Percent__c)</formula>
    <label>Default Discount Percent</label>
    <type>Text</type>
</CustomField>