force-app/main/default/objects/Quote__c/fields/Default_First_Bill_Day__c.field-meta.xml
<CustomField>
    <fullName>Default_First_Bill_Day__c</fullName>
    <formula>TEXT(Bill_To_Name__r.First_Bill_Day__c)</formula>
    <label>Default First Bill Day</label>
    <type>Text</type>
</CustomField>