force-app/main/default/objects/Quote__c/fields/Default_Net_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Net_Days__c</fullName>
    <formula>TEXT(Bill_To_Name__r.Net_Days__c )</formula>
    <label>Default Net Days</label>
    <type>Text</type>
</CustomField>