force-app/main/default/objects/Quote__c/fields/Default_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Terms__c</fullName>
    <formula>TEXT(Bill_To_Name__r.Payment_Terms__c )</formula>
    <label>Default Payment Terms</label>
    <type>Text</type>
</CustomField>