force-app/main/default/objects/Quote__c/fields/Default_Second_Bill_Day__c.field-meta.xml
<CustomField>
    <fullName>Default_Second_Bill_Day__c</fullName>
    <formula>TEXT(Bill_To_Name__r.Second_Bill_Day__c)</formula>
    <label>Default Second Bill Day</label>
    <type>Text</type>
</CustomField>