force-app/main/default/objects/Quote__c/fields/Default_Waive_Minimum_Billing__c.field-meta.xml
<CustomField>
    <fullName>Default_Waive_Minimum_Billing__c</fullName>
    <formula>Bill_To_Name__r.Waive_Minimum_Billing__c</formula>
    <label>Default Waive Minimum Billing</label>
    <type>Checkbox</type>
</CustomField>