force-app/main/default/objects/Quote__c/fields/Discount_Days__c.field-meta.xml
<CustomField>
    <fullName>Discount_Days__c</fullName>
    <label>Discount Days</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Terms__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>