force-app/main/default/objects/Quote__c/fields/Display_Service_Availability_Warning_Msg__c.field-meta.xml
<CustomField>
    <fullName>Display_Service_Availability_Warning_Msg__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to show service line warning msg</description>
    <label>Display Service Availability Warning Msg</label>
    <type>Checkbox</type>
</CustomField>