force-app/main/default/objects/Quote__c/fields/Distributor_Margin__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Margin__c</fullName>
    <label>Distributor Margin</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>