force-app/main/default/objects/Quote__c/fields/Distributor_Margin_Type__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Margin_Type__c</fullName>
    <label>Distributor Margin Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Long Margin</fullName>
            </value>
            <value>
                <fullName>Short Margin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>