force-app/main/default/objects/Quote__c/fields/Distributor_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAPE-887</description>
    <label>Distributor Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Distributor Project Manager)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>