force-app/main/default/objects/Quote__c/fields/Distributor_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Reference_Number__c</fullName>
    <label>Distributor Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>