force-app/main/default/objects/Quote__c/fields/Distributor_Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Sales_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAPE-887</description>
    <label>Distributor Sales Engineer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Distributor Sales Engineer)</relationshipLabel>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>