force-app/main/default/objects/Quote__c/fields/DistributorSharedQuoteSpecialist__c.field-meta.xml
<CustomField>
    <fullName>DistributorSharedQuoteSpecialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAQM-4780</description>
    <label>Distributor Shared Quote Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>shared_quotes</relationshipName>
    <type>Lookup</type>
</CustomField>