force-app/main/default/objects/Quote__c/fields/DM_Current_Authorized_TOMV__c.field-meta.xml
<CustomField>
    <fullName>DM_Current_Authorized_TOMV__c</fullName>
    <label>Deal Manager Authorized TOMV</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>