force-app/main/default/objects/Quote__c/fields/DM_Current_Operation__c.field-meta.xml
<CustomField>
    <fullName>DM_Current_Operation__c</fullName>
    <label>Current Operation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>