force-app/main/default/objects/Quote__c/fields/DM_Is_Submit_for_approval__c.field-meta.xml
<CustomField>
    <fullName>DM_Is_Submit_for_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when user click submit for aproval button</description>
    <label>DM Is Submit for approval</label>
    <type>Checkbox</type>
</CustomField>