force-app/main/default/objects/Quote__c/fields/DM_Safety_Factor__c.field-meta.xml
<CustomField>
    <fullName>DM_Safety_Factor__c</fullName>
    <label>Safety Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>