force-app/main/default/objects/Quote__c/fields/Document_Option__c.field-meta.xml
<CustomField>
    <fullName>Document_Option__c</fullName>
    <label>Document Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>BOM</fullName>
            </value>
            <value>
                <fullName>BOM &amp; Drawings</fullName>
            </value>
            <value>
                <fullName>Drawings</fullName>
            </value>
            <value>
                <fullName>Full Submittal Package</fullName>
            </value>
            <value>
                <fullName>Export Documents</fullName>
            </value>
            <value>
                <fullName>Services BOM</fullName>
            </value>
            <value>
                <fullName>EcoCare BOM</fullName>
            </value>
            <value>
                <fullName>Operation and Maintenance Manuals</fullName>
                <label>Operation &amp; Maintenance Manuals</label>
            </value>
            <value>
                <fullName>Panelboard Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>