force-app/main/default/objects/Quote__c/fields/Drawloop_BoM_Type__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_BoM_Type__c</fullName>
    <label>BoM Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detailed</fullName>
            </value>
            <value>
                <fullName>Short</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>