force-app/main/default/objects/Quote__c/fields/Drawloop_ClarificationGroupedBy__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_ClarificationGroupedBy__c</fullName>
    <defaultValue>&quot;No Grouping&quot;</defaultValue>
    <label>Drawloop Clarification Grouped By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Grouping</fullName>
            </value>
            <value>
                <fullName>Clarification Type</fullName>
            </value>
            <value>
                <fullName>Support Group</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Specification Section</fullName>
            </value>
            <value>
                <fullName>Drawing Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>