force-app/main/default/objects/Quote__c/fields/Drawloop_ClarificationLocation__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_ClarificationLocation__c</fullName>
    <defaultValue>&quot;First Page, Before BOM&quot;</defaultValue>
    <description>Placement of the Clarifications and Exceptions on print BOM</description>
    <label>Drawloop Clarification Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Page, Before BOM</fullName>
            </value>
            <value>
                <fullName>Separate C/E Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>