force-app/main/default/objects/Quote__c/fields/Drawloop_Conditions_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Conditions_of_Sale__c</fullName>
    <label>Conditions of Sale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>