force-app/main/default/objects/Quote__c/fields/Drawloop_Cover_Letter__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Cover_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cover Letter</label>
    <type>Checkbox</type>
</CustomField>