force-app/main/default/objects/Quote__c/fields/Drawloop_Cover_Letter_Text__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Cover_Letter_Text__c</fullName>
    <label>Cover Letter Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>