force-app/main/default/objects/Quote__c/fields/Drawloop_Cover_Page__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Cover_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cover Page</label>
    <type>Checkbox</type>
</CustomField>