force-app/main/default/objects/Quote__c/fields/Drawloop_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Date_Format__c</fullName>
    <label>Date Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MM/DD/YYYY</fullName>
                <default>true</default>
                <label>MM/DD/YYYY</label>
            </value>
            <value>
                <fullName>DD/MM/YYYY</fullName>
            </value>
            <value>
                <fullName>YYYYMMDD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>