force-app/main/default/objects/Quote__c/fields/Drawloop_Descriptions__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Descriptions__c</fullName>
    <label>Descriptions</label>
    <type>TextArea</type>
</CustomField>