force-app/main/default/objects/Quote__c/fields/Drawloop_Display_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Display_Pricing__c</fullName>
    <label>Display Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Total Price</fullName>
            </value>
            <value>
                <fullName>Line Item Pricing</fullName>
            </value>
            <value>
                <fullName>Extended Detail Pricing</fullName>
            </value>
            <value>
                <fullName>Line Item List Pricing</fullName>
                <isActive>false</isActive>
                <label>Line Item List Pricing</label>
            </value>
            <value>
                <fullName>Price by Group</fullName>
                <isActive>false</isActive>
                <label>Price by Group</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>