force-app/main/default/objects/Quote__c/fields/Drawloop_Distributor_Account__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Distributor_Account__c</fullName>
    <label>Drawloop Distributor Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>