force-app/main/default/objects/Quote__c/fields/Drawloop_Do_not_show_logo_on_cover_page__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Do_not_show_logo_on_cover_page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this box is checked, the cover page will not have a logo.</description>
    <inlineHelpText>When this box is checked, the cover page will not have a logo.</inlineHelpText>
    <label>Do not show logo on cover page</label>
    <type>Checkbox</type>
</CustomField>