force-app/main/default/objects/Quote__c/fields/Drawloop_Document_Language__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Document_Language__c</fullName>
    <inlineHelpText>Select the language in which you want to see the document</inlineHelpText>
    <label>Document Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>