force-app/main/default/objects/Quote__c/fields/Drawloop_Dynamic_Group__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Dynamic_Group__c</fullName>
    <label>Drawloop Dynamic Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>