force-app/main/default/objects/Quote__c/fields/Drawloop_EndCustomer_Account__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_EndCustomer_Account__c</fullName>
    <label>Drawloop EndCustomer Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>