force-app/main/default/objects/Quote__c/fields/Drawloop_Estimated_Days_To_Ship__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Estimated_Days_To_Ship__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Changed the Default value to true to make sure that the communities functionalities are not affected.</description>
    <label>Estimated Days To Ship</label>
    <type>Checkbox</type>
</CustomField>