force-app/main/default/objects/Quote__c/fields/Drawloop_Exclude_Clarifications__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Exclude_Clarifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field defines if Clarifications &amp; Exceptions are included in BoM Output or not.</description>
    <label>Drawloop_Exclude_Clarifications</label>
    <type>Checkbox</type>
</CustomField>