force-app/main/default/objects/Quote__c/fields/Drawloop_FOB__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_FOB__c</fullName>
    <defaultValue>true</defaultValue>
    <label>FOB</label>
    <type>Checkbox</type>
</CustomField>