force-app/main/default/objects/Quote__c/fields/Drawloop_GeneratedBy_IndirectPurchaser__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_GeneratedBy_IndirectPurchaser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Indicate if the Document is Generated by Indirect Purchaser Profile User</description>
    <inlineHelpText>To Indicate if the Document is Generated by Indirect Purchaser Profile User</inlineHelpText>
    <label>Drawloop_GeneratedBy_IndirectPurchaser</label>
    <type>Checkbox</type>
</CustomField>