force-app/main/default/objects/Quote__c/fields/Drawloop_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Grouping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grouping</label>
    <type>Checkbox</type>
</CustomField>