force-app/main/default/objects/Quote__c/fields/Drawloop_Is_First_Run__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Is_First_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Run</label>
    <type>Checkbox</type>
</CustomField>