force-app/main/default/objects/Quote__c/fields/Drawloop_Logo__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Logo__c</fullName>
    <label>Logo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SE-Life is on</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
                <default>true</default>
                <label>SE</label>
            </value>
            <value>
                <fullName>Square D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>