force-app/main/default/objects/Quote__c/fields/Drawloop_Logo_Selected__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Logo_Selected__c</fullName>
    <formula>IF(text(Drawloop_Logo__c) = &apos;SE&apos;, &apos;&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo_Selected</label>
    <type>Text</type>
</CustomField>