force-app/main/default/objects/Quote__c/fields/Drawloop_Prepared_By__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Prepared_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prepared By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prepared_By</relationshipName>
    <type>Lookup</type>
</CustomField>