force-app/main/default/objects/Quote__c/fields/Drawloop_Progress_Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Progress_Billing_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Progress Billing Schedule</label>
    <type>Checkbox</type>
</CustomField>