force-app/main/default/objects/Quote__c/fields/Drawloop_Proposal_Name__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Proposal_Name__c</fullName>
    <label>Drawloop Proposal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>