force-app/main/default/objects/Quote__c/fields/Drawloop_Proposal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Proposal_Notes__c</fullName>
    <label>Proposal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>