force-app/main/default/objects/Quote__c/fields/Drawloop_Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Quote_Date__c</fullName>
    <label>Drawloop Quote Date</label>
    <type>Date</type>
</CustomField>