force-app/main/default/objects/Quote__c/fields/Drawloop_Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Quote_Name__c</fullName>
    <label>Drawloop Quote Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>