force-app/main/default/objects/Quote__c/fields/Drawloop_Quote_Totals_Location__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Quote_Totals_Location__c</fullName>
    <label>Quote Totals Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before BOM</fullName>
            </value>
            <value>
                <fullName>After BOM</fullName>
                <default>true</default>
                <label>After BOM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>