force-app/main/default/objects/Quote__c/fields/Drawloop_Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Sales_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes6</relationshipName>
    <type>Lookup</type>
</CustomField>