force-app/main/default/objects/Quote__c/fields/Drawloop_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Sell_Price__c</fullName>
    <label>Sell Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>