force-app/main/default/objects/Quote__c/fields/Drawloop_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Total_Price__c</fullName>
    <formula>IF(TEXT(Drawloop_Display_Pricing__c) = &apos;None&apos;, 0,	
	IF(TEXT(Drawloop_Type_of_Pricing__c) = &apos;LIST&apos;, MDL_Extended_List_Price_Summary__c,	
IF(TEXT(Drawloop_Type_of_Pricing__c) = &apos;PROFILE&apos;, MDL_Extended_Purchaser_Profile_Price__c, 
        IF(Drawloop_GeneratedBy_IndirectPurchaser__c,customerSharedPurchasePrice__c,
        IF(TEXT(Drawloop_Type_of_Pricing__c) = &apos;AUTHORIZED&apos;, (IF( RecordType.Name = &apos;Internal Change Order Quote&apos;, AuthorizedTOMV__c, Authorize_Equipment_Sell_Price__c)), 
IF(TEXT(Drawloop_Type_of_Pricing__c) = &apos;DISTRIBUTOR SELL PRICE&apos;, 
        MDL_Distributor_Total_Sell_Price__c,
        MDL_Extended_List_Price_Summary__c
        )
        )
        )
        )
        )
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawloop Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>