force-app/main/default/objects/Quote__c/fields/Drawloop_Type_of_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Type_of_Pricing__c</fullName>
    <label>Type of Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DISTRIBUTOR SELL PRICE</fullName>
            </value>
            <value>
                <fullName>LIST</fullName>
            </value>
            <value>
                <fullName>PROFILE</fullName>
            </value>
            <value>
                <fullName>AUTHORIZED</fullName>
            </value>
            <value>
                <fullName>CUSTOM PRICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>