force-app/main/default/objects/Quote__c/fields/Drawloop_User_Notes__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_User_Notes__c</fullName>
    <description>This field is used to store user notes from the Proposal Designer Page</description>
    <label>Drawloop_User_Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>