force-app/main/default/objects/Quote__c/fields/Drawloop_Warranty_Years__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Warranty_Years__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Warranty Years</label>
    <type>Checkbox</type>
</CustomField>