force-app/main/default/objects/Quote__c/fields/DrawloopLiquidated__c.field-meta.xml
<CustomField>
    <fullName>DrawloopLiquidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether Liquidated Damages text is displayed on Print Documents.</description>
    <label>Drawloop Liquidated Damages</label>
    <type>Checkbox</type>
</CustomField>