force-app/main/default/objects/Quote__c/fields/DrawloopShowSummarizedBom__c.field-meta.xml
<CustomField>
    <fullName>DrawloopShowSummarizedBom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAPE-4676</description>
    <label>DrawloopShowSummarizedBom</label>
    <type>Checkbox</type>
</CustomField>